--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,8 +19,7 @@
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
     "@typescript-eslint/semi": ["error", "always"],
-    "comma-dangle": ["error", "always-multiline"],
     "linebreak-style": ["error", "unix"],
-    "react/display-name": "off"
+    "@typescript-eslint/no-empty-interface": "off"
   }
 }
